Switch compiler from gcc to clang

gcc does not currently support template deduction guides for nested
template classes (see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=79501).