Makefile
@@ -1,7 +1,7 @@
 default: ecs
 
 ecs: ecs.cpp *.hpp **/*.hpp
-	g++ -std=c++2a -fconcepts -O3 -o ecs ecs.cpp
+	clang++ -std=c++2a -O3 -o ecs ecs.cpp
 
 run: ecs
 	./ecs
